# top_speed

./: .gitignore  info.json
.github/workflows/: release-build.yml
docs/: game-guide.md  render_docs.py  vehicle-physics-and-creation-guide.html  vehicle-physics-and-creation-guide.md
docs/android/: phase-01-native-bootstrap.md
top_speed_net/: NuGet.Config  TopSpeed.sln  cleanup-visualstudio-registry.ps1
top_speed_net/TS.Audio/: SteamAudioContext.cs
top_speed_net/TS.Audio/Assets/: Buffer.cs  Clip.cs  Generator.cs  Kind.cs  Library.cs  Sound.cs  Stream.cs
top_speed_net/TS.Audio/Buses/: Effect.cs  Snapshot.cs
top_speed_net/TS.Audio/Effects/: Callback.cs
top_speed_net/TS.Audio/Engine/: Engine.cs  Options.cs  Snapshot.cs
top_speed_net/TS.Audio/Outputs/: Runtime.cs  Snapshot.cs  System.cs
top_speed_net/TS.Audio/Sources/: Options.cs  Policy.cs  Procedural.cs  Resolved.cs  Snapshot.cs  Source.cs
top_speed_net/TS.Audio/Streams/: Track.cs
top_speed_net/TS.Sdl/: TS.Sdl.csproj
top_speed_net/TS.Sdl/Core/: InitFlags.cs  Runtime.cs
top_speed_net/TS.Sdl/Dialogs/: FileDialogs.cs  MessageBoxes.cs  Types.cs
top_speed_net/TS.Sdl/Events/: Types.cs
top_speed_net/TS.Sdl/Interop/: Library.cs  Memory.cs  Utf8.cs
top_speed_net/TS.Sdl/Platform/: Android.cs
top_speed_net/TS.Sdl/Video/: DisplayOrientation.cs  Window.cs
top_speed_net/TopSpeed/: Program.cs  TopSpeed.csproj
top_speed_net/TopSpeed.Android/: AndroidManifest.xml  AndroidMotionSteeringSource.cs  AndroidSpeechThreadDispatcher.cs  MainActivity.cs  TopSpeed.Android.csproj  UpdatePackageInstaller.cs
top_speed_net/TopSpeed.Server/: Program.Args.cs  Program.cs  TopSpeed.Server.csproj
top_speed_net/TopSpeed.Server/Commands/: Host.cs  Input.cs
top_speed_net/TopSpeed.Server/Config/: ServerSettings.cs  Settings.cs  SettingsStore.cs
top_speed_net/TopSpeed.Server/Logging/: ConsoleSink.cs
top_speed_net/TopSpeed.Server/Network/: RaceServer.cs  RaceServerConfig.cs  UdpServerTransport.cs
top_speed_net/TopSpeed.Server/Protocol/: PacketSerializer.cs
top_speed_net/TopSpeed.Server/Tracks/: TrackLoader.cs
top_speed_net/TopSpeed.Server/Updates/: Runner.cs  Service.cs
top_speed_net/TopSpeed.Shared/: ProtocolConstants.cs  ProtocolEnums.cs  ProtocolPackets.cs  TopSpeed.Shared.csproj  TrackAudioProfiles.cs  TrackParser.Builders.cs  TrackParser.Keys.cs  TrackParser.Rules.cs
top_speed_net/TopSpeed.Shared.Tests/: TopSpeed.Shared.Tests.csproj
top_speed_net/TopSpeed.Shared.Tests/Physics/: AutomaticDriveline.cs  BotPhysics.cs  Tires.cs
top_speed_net/TopSpeed.Shared/Bots/: PhysicsCatalog.cs
top_speed_net/TopSpeed.Shared/Localization/: Bootstrap.cs  CatalogLocalizer.cs  ITextLocalizer.cs  LocalizationService.cs  PassthroughLocalizer.cs
top_speed_net/TopSpeed.Shared/Protocol/: Enums.cs  RoomTexts.cs  (+1 more)
top_speed_net/TopSpeed.Tests/: TopSpeed.Tests.csproj
top_speed_net/Tracks/: approach_demo.tsm
top_speed_net/Updater/: Program.cs  Updater.csproj
top_speed_net/Vehicles/: streetracer.vhc
top_speed_net/languages/: Generate-Templates.ps1
top_speed_net/scripts/: Build-WindowsNativeDeps.ps1  README.md
top_speed_net/tolk/: CMakeLists.txt
(+663 files in other folders)
